fix: add package whitelist for FillRuleUtil reflection (#9438)
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>